# password-manager

./: .gitignore  README.md
LockBox/: .gitignore  CMakeLists.txt  addpasswordpage.cpp  addpasswordpage.h  addpasswordpage.ui  autofillmanager.cpp  autofillmanager.h  autolockmanager.cpp  autolockmanager.h  crypto.cpp  crypto.h  database.cpp  database.h  hibpchecker.cpp  hibpchecker.h  ipcserver.cpp  ipcserver.h  lockbox.db  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  passwordlist.cpp  passwordlist.h  passwordlist.ui  style.qss  totp.cpp  totp.h  totpdialog.cpp  totpdialog.h  utils.cpp  utils.h  vault_exporter.cpp  vault_exporter.h  vault_importer.cpp  vault_importer.h  vaultsession.cpp  (+3 more)
LockBox/browser/chrome-test/: background.js  content.js  manifest.json
LockBox/browserbridge/: aesgcm.cpp  aesgcm.h  pairingmanager.cpp  pairingmanager.h  websocketserver.cpp  websocketserver.h
LockBox/nativehost/: main.cpp
